# dpl

./: .gitignore  CMakeLists.txt  Makefile  README.md  gtest.BUILD
bbp/: CMakeLists.txt  README.md  promise.cpp  promise.h  promise.t.cpp  ranges_concepts.h  variant.h
dplbbp/: CMakeLists.txt  README.md  dplbbp_anypromise.cpp  dplbbp_anypromise.h  dplbbp_promise.cpp  dplbbp_promise.h  dplbbp_promise.t.cpp  dplbbp_ranges_concepts.h  dplbbp_resolver.cpp  dplbbp_resolver.h
dplm17/: BUILD  CMakeLists.txt  README.md  dplm17_variant.cpp  dplm17_variant.h
dplm20/: BUILD  CMakeLists.txt  README.md  dplm20_overload.cpp  dplm20_overload.h  dplm20_overload.t.cpp
dplmrts/: CMakeLists.txt  README.md  dplmrts_anytuple.cpp  dplmrts_anytuple.h  dplmrts_anytuple.t.cpp  dplmrts_invocable.cpp  dplmrts_invocable.h  dplmrts_invocable.t.cpp  dplmrts_invocablearchetype.cpp  dplmrts_invocablearchetype.h  dplmrts_invocablearchetype.t.cpp
dplp/: BUILD  CMakeLists.txt  README.md  dplp_anypromise.cpp  dplp_anypromise.h  dplp_anypromise.t.cpp  dplp_promise.cpp  dplp_promise.h  dplp_promise.t.cpp  dplp_promisestate.cpp  dplp_promisestate.h  dplp_promisestateimp.cpp  dplp_promisestateimp.h  dplp_promisestateimputil.cpp  dplp_promisestateimputil.h  dplp_promisestateutil.cpp  dplp_promisestateutil.h  dplp_resolver.cpp  dplp_resolver.h  dplp_resolver.t.cpp
m17/: CMakeLists.txt  variant.h
